@@ -10,6 +10,8 @@
   *
   *  <b>New:</b>
   *  - Added new Dual Role Keyboard/Mouse demo
+  *  - Added new HID_HOST_BOOT_PROTOCOL_ONLY compile time token to reduce the size of the HID Host Class driver when
+  *    Report protocol is not needed
   *
   *  <b>Changed:</b>
   *  - Removed mostly useless "TestApp" demo, as it was mainly useful only for checking for sytax errors in the library
